fixed object overview page appearance with dark theme (fixes NX-1520)